@@ -87,6 +87,8 @@ import org.jasypt.digest.StringDigester;
  * </p>
  * 
  * @since 1.1
+ * @deprecated Replaced by {@link org.jasypt.springsecurity.PasswordEncoder}
+ *             and will be removed in version 1.3. 
  * 
  * @author Daniel Fern&aacute;ndez Garrido
  * 
